--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,10 @@ python-dateutil==2.9.0.post0
 requests==2.31.0
 email-validator==2.1.1
 PyJWT==2.8.0
+gunicorn==21.2.0
+pgvector==0.4.1
+openai>=1.12.0
+pydantic-settings>=2.0.0
+python-dotenv>=1.0.0
 
 
