--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,9 @@ requests==2.31.0
 email-validator==2.1.1
 PyJWT==2.8.0
 gunicorn==21.2.0
+pgvector==0.4.1
+openai>=1.12.0
+pydantic-settings>=2.0.0
+python-dotenv>=1.0.0
 
 
