test(docker): initial test with Docker setup

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,5 @@
 # ==========================================
-# Imagen base única - SIN multi-stage
+# Imagen base para producción en Render
 # ==========================================
 FROM python:3.11-slim
 
@@ -13,20 +13,21 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar requirements PRIMERO (para aprovechar caché de Docker)
+# Copiar requirements PRIMERO (para cache de Docker)
 COPY requirements.txt .
 
-# Instalar dependencias de Python GLOBALMENTE (no --user)
+# Instalar dependencias de Python
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
 # Copiar código de la aplicación
 COPY ./src /app/src
 COPY ./docs /app/docs
-COPY ./.env /app/.env
 
+# IMPORTANTE: NO copiar .env al contenedor
+# Render manejará las variables de entorno
 
-# Exponer puerto
+# Exponer puerto (Render usa la variable PORT)
 EXPOSE 8088
 
 # Variables de entorno
@@ -37,5 +38,6 @@ ENV PYTHONPATH=/app
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8088/health || exit 1
 
-# Comando para ejecutar (SIN crear usuario no-root por ahora)
-CMD ["uvicorn", "src.app.main:app", "--host", "0.0.0.0", "--port", "8088"]
+# Comando para ejecutar
+# Render usa la variable $PORT, así que haremos que sea flexible
+CMD uvicorn src.app.main:app --host 0.0.0.0 --port ${PORT:-8088}
