--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,7 +23,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# ✅ Copiar requirements.txt desde backend/
 COPY requirements.txt .
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
@@ -49,11 +48,11 @@ RUN groupadd -r appuser && \
     mkdir -p /app && \
     chown -R appuser:appuser /app
 
-# ✅ Copiar código backend (solo src desde el contexto backend/)
-COPY --chown=appuser:appuser ./src /app/src
+# Copiar código backend
+COPY --chown=appuser:appuser ./backend/src /app/src
 
-# ✅ Copiar frontend desde la raíz del proyecto
-COPY --chown=appuser:appuser ../frontend /app/frontend
+#  COPIAR FRONTEND (CLAVE PARA ESTA OPCIÓN)
+COPY --chown=appuser:appuser ./frontend /app/frontend
 
 # Variables de entorno
 ENV PYTHONPATH=/app/src
@@ -70,7 +69,7 @@ EXPOSE ${PORT:-10000}
 
 # Comando con Gunicorn + Uvicorn workers
 CMD gunicorn app.main:app \
-    --workers ${WORKERS:-4} \
+    --workers 4 \
     --worker-class uvicorn.workers.UvicornWorker \
     --bind 0.0.0.0:${PORT:-10000} \
     --timeout 120 \
